force-app/main/default/objects/Contract_History_Log__c/Contract_History_Log__c.object-meta.xml
<CustomObject>
    <label>Contract History Log</label>
    <nameField>
        <displayFormat>CHL-{0}</displayFormat>
        <label>Contract History Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract History Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>